# OpenClaw-NemoClaw-Interactive-Graph

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
ClawGraph/: config.py  main.py
ClawGraph/github_mcp_server/: github_client.py  server.py
ClawGraph/graph/: __init__.py  analytics.py  base.py  memory_client.py  visualizer.py
ClawGraph/pipeline/: orchestrator.py  scheduler.py
ClawGraph/pipeline/stages/: __init__.py  crawl.py  curate.py  embed.py  extract.py  graph_update.py
ClawGraph/rag/: __init__.py  generator.py  retriever.py
ClawGraph/security/: __init__.py  audit.py  classifier.py  guardrails.py  sanitizer.py
ClawGraph/static/: viz.html
knowledgeforge/: __init__.py  main.py  models.py
knowledgeforge/github_mcp_server/: __init__.py  server.py  tools.py
knowledgeforge/graph/: base.py  memory_client.py  neo4j_client.py  queries.py
knowledgeforge/pipeline/: __init__.py  orchestrator.py  scheduler.py
knowledgeforge/pipeline/stages/: crawl.py  curate.py  embed.py  extract.py  graph_update.py
knowledgeforge/rag/: embeddings.py  generator.py  retriever.py
knowledgeforge/security/: audit.py  canary.py  classifier.py  defense.py
openclaw_skill/: ClawGraph_tool.py  SKILL.md  agent.md  knowledgeforge_tool.py
openclaw_skill/scripts/: kg.sh
scripts/: render_graph.py
tests/: conftest.py  test_api.py  test_graph.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_rag.py  test_security.py
